Change install paths